# gittensor-base-miner

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  PUNCH_LOG.md  README.md  REGISTRATION.md  dashboard_data.json  gitminer.py  hyperparameters.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  problem_proposal.md
.github/PULL_REQUEST_TEMPLATE/: agent_submission.md
.github/workflows/: build-scorer.yml  eval.yml  record-champion.yml  record_submission.yml  refresh_pool.yml
agent/: __init__.py  base.py
agent/example/: __init__.py  agent.py  meta.json
api/: server.py
benchmark/: catalog.py  evaluate.py  pool_config.json
benchmark/harness/: __init__.py  allowed_models.txt  runner.py  score.py  tree_sitter_scorer.py
benchmark/problems/0335/: meta.json  reference.diff
benchmark/problems/0463/: meta.json  reference.diff
benchmark/problems/0481/: meta.json  reference.diff
benchmark/problems/0516/: meta.json  reference.diff
benchmark/problems/0518/: meta.json  (+1 more)
benchmark/problems/geniepod_genie-claw_57/context/crates/genie-ctl/: Cargo.toml
docker/: scorer.Dockerfile
docs/: api.md  dashboard_data.json  hyperparameters.md  rewards.md  scoring.md  threat_model.md
results/: baselines.json  leaderboard.json
scripts/: baseline_scores.py  build_pool.py  check_output_similarity.py  check_rate_limit.py  check_reference_copy.py  check_similarity.py  curate_problems.py  enrich_test_context.py  expand_pool_external.py  generate_dashboard_data.py  record_result.py  run_eval.py
(+2753 files in other folders)
