[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gittensor-base-miner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
gitminer = "gitminer:main"

[tool.setuptools]
py-modules = ["gitminer"]
packages = ["agent", "benchmark", "benchmark.harness"]
